feat: supplement JVM articles with Reference semantics, memory layout, Memory Order deep-dives; add graceful shutdown article